--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,14 @@
         object-fit: scale-down;
       }
     </style>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2W3M70JWDW"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-2W3M70JWDW');
+    </script>
   </head>
   <body>
     <div id="app">
